--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
-    <!DOCTYPE html>
-    <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="csstabela.css" media="screen" />
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="tabela de pontos - 2º campeonato de sinuca bar do Tiradentes">
+    <link rel="stylesheet" type="text/css" href="cssferramentas.css" media="screen" />
+    <link rel="icon" href="https://i.imgur.com/Apfojt7.png" type="image/png">
         <title>2º Campeonato de Sinuca - Bar do Tiradentes</title>
     </head>
     <body>
