--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="tabela de pontos - 2º campeonato de sinuca bar do Tiradentes">
-    <link rel="stylesheet" type="text/css" href="cssferramentas.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="csstabela.css" media="screen" />
     <link rel="icon" href="https://i.imgur.com/Apfojt7.png" type="image/png">
         <title>2º Campeonato de Sinuca - Bar do Tiradentes</title>
     </head>
