--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="tabela de pontos - 2º campeonato de sinuca bar do Tiradentes">
     <link rel="stylesheet" type="text/css" href="csstabela.css" media="screen" />
     <link rel="icon" href="https://i.imgur.com/Apfojt7.png" type="image/png">
-        <title>2º Campeonato de Sinuca - Bar do Tiradentes</title>
+        <title>2º Campeonato de Sinuca - Bar do Tiradentes | Pontos e Placar</title>
     </head>
     <body>
         <header>
