--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="date">Data de atualização: 16/10/2023</div>
         </header>
         <div class="tabela">
-        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQG1bN6URStC4YpM89krTkMEOt0vuscv94N2APybmybo_pqpLmWlwr7czyPqAnPZBskOIV0LdGh3B7P/pubhtml?gid=444785851&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+        <iframe src="https://docs.google.com/spreadsheets/u/0/d/1w8Z6SLUnJZ8G7d4aRmo3Lw4RYv-ymxXhOcrpl8Hlf9E/htmlview?pli=1"></iframe>
         </div>
     </body>
     </html>
