--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="date">Data de atualização: 16/10/2023</div>
         </header>
         <div class="tabela">
-        <iframe src="https://docs.google.com/spreadsheets/u/0/d/1w8Z6SLUnJZ8G7d4aRmo3Lw4RYv-ymxXhOcrpl8Hlf9E/htmlview?pli=1"></iframe>
+        <iframe src="https://docs.google.com/spreadsheets/d/1pgXUdbYmRSGbvpYomUpBOfNOLRd-Ff2IFoYu7I4ldfo/edit?usp=drivesdk"></iframe>
         </div>
     </body>
     </html>
