--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="date">Data de atualização: 16/10/2023</div>
         </header>
         <div class="tabela">
-        <iframe src="https://docs.google.com/spreadsheets/d/1pgXUdbYmRSGbvpYomUpBOfNOLRd-Ff2IFoYu7I4ldfo/edit?usp=drivesdk"></iframe>
+        <iframe src="https://docs.google.com/spreadsheets/d/1R3E7y405LtcrmrK_aMo6CkYXL06AB0RG/edit?usp=drivesdk&ouid=113753403935022113476&rtpof=true&sd=true"></iframe>
         </div>
     </body>
     </html>
