--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="date">Data de atualização: 16/10/2023</div>
         </header>
         <div class="tabela">
-        <iframe src="https://docs.google.com/spreadsheets/u/0/d/1R3E7y405LtcrmrK_aMo6CkYXL06AB0RG/htmlview"></iframe>
+        <iframe src="https://docs.google.com/spreadsheets/d/1Y1zBXyEztevkQJ-YFwQwLIm4R6znt2gUTmjH-4g5CMI/edit?usp=drivesdk"></iframe>
         </div>
     </body>
     </html>
