--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="date">Data de atualização: 16/10/2023</div>
         </header>
         <div class="tabela">
-        <iframe src="https://docs.google.com/spreadsheets/d/1Y1zBXyEztevkQJ-YFwQwLIm4R6znt2gUTmjH-4g5CMI/edit?usp=drivesdk"></iframe>
+        <iframe src="https://docs.google.com/spreadsheets/d/15EfE5sLwsWdzV1s0WwplfH2GyUqAjN5C/edit?usp=drivesdk&ouid=113753403935022113476&rtpof=true&sd=true"></iframe>
         </div>
     </body>
     </html>
