--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="date">Data de atualização: 17/10/2023</div>
         </header>
         <div class="tabela">
-        <iframe src="https://docs.google.com/spreadsheets/d/1d7TLTOZdFWAD1iQuXbEfPp_O-Ki5exicjEYn9Z-vIDs/edit?usp=sharing"></iframe>
+        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ_GTp9pasN-QoEWp6MAi1qHhE8HkRjltvlAKNm5U7qPJQ2r6ZwDflgxb2IhM8tHfm_BF9shfspjt_6/pubhtml?gid=420638226&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
         </div>
     </body>
     </html>
