--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <body>
         <header>
             <h1>2º CAMPEONATO DE SINUCA - BAR DO TIRADENTES</h1>
-            <div class="date">Data de atualização: 06/12/2023</div>
+            <div class="date">Data de atualização: 13/12/2023</div>
         </header>
         <div class="tabela">
-        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ_GTp9pasN-QoEWp6MAi1qHhE8HkRjltvlAKNm5U7qPJQ2r6ZwDflgxb2IhM8tHfm_BF9shfspjt_6/pubhtml?gid=420638226&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ_GTp9pasN-QoEWp6MAi1qHhE8HkRjltvlAKNm5U7qPJQ2r6ZwDflgxb2IhM8tHfm_BF9shfspjt_6/pubhtml?widget=true&amp;headers=false"></iframe>>
         </div>
     </body>
     </html>
